<?xml version="1.0"?>
<package>
  <name>ark_codes</name>
  <version>0.0.0</version>
  <description>The ark_codes package</description>
  <maintainer email="amanchandra333@gmail.com">amanchandra333</maintainer>
  <license>TODO</license>


  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
